# mifkad

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Mifkad.toml  README.md  bsconfig.json  build.rs  mifkad-launcher.bat  package.json  pnpm-lock.yaml  release-win.bat  testing.json  webpack.config.js
mifkad-assets/: index.html
mifkad-assets/css/: index.css
migrations/2018-08-27-171757_create_records/: down.sql  up.sql
release/sample/: sample_enroll_all_detail_week.xlsx
release/static/css/: index.css
release/static/js/: Index.js
release/webapp/src/: index.html
sample/: current.xlsx  test.xls
schema/: enrollment.capnp
src/: data.rs  enrollment.rs  handlers.rs  main.rs  schema.rs
src/backend/: config.rs  data.rs  db.rs  handlers.rs  main.rs  schema.rs  util.rs
src/frontend/: App.re  ExtendedDay.re  FileConsole.re  Index.re  Kid.re  KidList.re  OutputViewer.re  Report.re  Room.re  Roster.re  Types.re
static/: index.css
static/css/: index.css
webapp/src/: App.re  FileConsole.re  FileUpload.re  Kid.re  KidList.re  Report.re  Room.re  Roster.re  Types.re  index.html
