[package]
authors = ["deciduously <github@deciduously.com>"]
edition = "2018"
name = "mifkad"
version = "0.4.0"
[[bin]]
name = "mifkad"
path = "src/backend/main.rs"

[dependencies]
actix-rt = "0.2"
actix-web = "1.0.0-beta"
calamine = "0.15"
chrono = "0.4"
error-chain = "0.12"
failure = "*"
futures = "0.1"
lazy_static = "1.3"
log = "0.4"
pretty_env_logger = "0.3"
r2d2 = "0.8"
r2d2_sqlite = "0.10"
regex = "1.1"
rusqlite = "0.18"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"

[dev-dependencies]
pretty_assertions = "0.6"
