[package]
authors = ["deciduously <github@deciduously.com>"]
name = "mifkad"
version = "0.3.2"
edition = "2018"
[[bin]]
name = "mifkad"
path = "src/backend/main.rs"

[dependencies]
actix = "0.7"
actix-web = "0.7"
calamine = "0.16"
chrono = "0.4"
error-chain = "0.12"
futures = "0.1"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"

[dev-dependencies]
pretty_assertions = "0.6"
